2016-03-14  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* Removed siam_genxml as incompatible with SIAM v1.x data model

2014-05-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* Merged branch SIAM_v1.x into master

2012-03-20  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: tp-siam plugin release 2.02.01

2012-03-07  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* siam_rrdfetch.in: new command-line utility

2012-02-08  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* split siam.in into siam_genddx.in, siam_genxml.in

2011-12-29  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* siam.in: aggregate traffic graphs

2011-09-11  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* SIAMDD.pm (checkdevtype): Improved error handling

2011-09-04  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Plugin release 2.01.01
