@@ -210,6 +210,7 @@
 /src/bin/configsnapshot
 /src/bin/devdiscover
 /src/bin/flushmonitors
+/src/bin/gc
 /src/bin/genddx
 /src/bin/genlist
 /src/bin/genreport
