@@ -1,3 +1,7 @@
+2017-12-01  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* bin/gc.in: new utility "torrus gc"
+
 2017-07-13  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* NEWS: Torrus Release 3.00
